Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26986

"Open File" dialog with filter won't show files

    XMLWordPrintable

Details

    • a1915fbb52b1fd73fd2aae1cb2c170a582379dcd

    Description

      Package: releases.qt-project.org/digia/2012-08-22/qt-windows-opensource-5.0.0-beta1-x86-offline.exe

      and package from 29-08-2012

      Platform: windows 7 - 64b

      In Example qtsvg\painting\svgviewer

      steps:
      1 - Launch the example
      2 - select the menu file->open
      3 - open the example's subfolder: file
      4 - no svg files are detected (while 3 svg files are available)

      expected:
      3 - the svg files should be listed and available for being loaded by the viewer

      Same problem with for example examples\qtbase\widgets\icons

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes